--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -179,3 +179,12 @@
 .typed {
   min-height: 50px;
 }
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
