--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 @keyframes rotating {
   from {
     -ms-transform: rotate(0deg);
@@ -183,7 +186,8 @@ canvas {
   display: block;
   vertical-align: bottom;
 }
-#particles-js {
+#particles-js,
+#particles-test {
   position: absolute;
   width: 100%;
   height: 100%;
